# pycones-grx

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Makefile  README.md  becas.html  blog.html  calendar.ics  develop_server.sh  docker-compose.yml  elaboracion-programa.html  gallery.html  hoteles.html  index.html  jobs.html  keynoters.html  mapa.html  organizers.html  past_editions.html  pelicanconf.local.py  pelicanconf.py  pelicanconf_common.py  pelicanconf_event.py  pelicanconf_event_jobs.py  pelicanconf_event_keynoters.py  pelicanconf_event_organizers.py  pelicanconf_event_past_editions.py  pelicanconf_event_sponsors.py  pelicanconf_flags.py  pyproject.toml  requirements.txt  schedule.html  sponsorship.html  taller-djangogirls.html  welcome.html
.github/workflows/: crush-pics.yml  deploy.yml
author/: python-espana-org.html  python-espana.html
category/: alojamiento.html  becas-y-ayudas.html  mapa.html  misc.html  talleres.html  welcome.html
compose/: Dockerfile  develop_server.sh
content/: becas.md  djangogirls.md  elaboracion-programa.md  faq.md  hello.md  hello2.md  hoteles.md  mapa.md  welcome.md
content/extra/: manifest.json
content/pages/: 404.md  city.md  (+3 more)
extensions/: gphotos.py  now.py
extra/: manifest.json
feeds/: all-es.atom.xml  all.atom.xml  alojamiento.atom.xml  becas-y-ayudas.atom.xml  mapa.atom.xml  misc.atom.xml  python-espana-org.atom.xml  python-espana-org.rss.xml  python-espana.atom.xml  python-espana.rss.xml  talleres.atom.xml  welcome.atom.xml
pages/: code-of-conduct.html  granada.html  mai.html  nieves.html
(+70 files in other folders)
